# msys2_env

./: .gitignore  README.md  pyproject.toml
msys2_env/: bash.ps1  fish.ps1  hello.py  main.py  msys2_shell.ps1  pack_install.ps1  pack_remove.ps1  shell_wrapper.py
tests/: args.ps1  remove_quotes.bat  script_path.ps1
