[project]
name = "msys2-env"
version = "2025.2.8.0"
description = "Create Python virtual environment using MSYS2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/soda92/msys2_env"

[project.scripts]
msys2_env = "msys2_env.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["msys2_env"]

[tool.hatch.build.targets.wheel]
packages = ["msys2_env"]
